--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,4 +12,6 @@ spring.mvc.pathmatch.matching-strategy=ant-path-matcher
 spring.freemarker.expose-request-attributes=true
 spring.freemarker.cache=false
 spring.freemarker.template-loader-path=file:src/main/resources/templates/ 
+spring.mvc.hiddenmethod.filter.enabled=true
+
 #spring.freemarker.suffix: .ftlh
