--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,13 +5,25 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=admin
 
+spring.mail.host=smtp.mail.ru
+spring.mail.username=dzianis.smirnou@mail.ru
+spring.mail.password=xEcnbDKysCGvE1m83gps
+spring.mail.port=465
+spring.mail.protocol=smtps
+mail.debug=true
+
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size = 5MB
+spring.servlet.multipart.max-request-size = 5MB
+
+spring.data.jpa.repositories.enabled=false
 
 #spring.jpa.hibernate.ddl-auto=create
+
+
 
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher
 spring.freemarker.expose-request-attributes=true
 spring.freemarker.cache=false
-spring.freemarker.template-loader-path=file:src/main/resources/templates/ 
+spring.freemarker.template-loader-path=file:src/main/resources/templates/
 spring.mvc.hiddenmethod.filter.enabled=true
-
-#spring.freemarker.suffix: .ftlh
